<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btn_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:text="@string/all_button"
                    app:backgroundTint="@color/red" />

                <Button
                    android:id="@+id/btn_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:text="@string/books_button"
                    android:textColor="@color/red"
                    app:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/btn_courses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:text="@string/courses_string"
                    android:textColor="@color/red"
                    app:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/btn_events"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/events_string"
                    android:textColor="@color/red"
                    app:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/btn_other"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/other_string"
                    android:textColor="@color/red"
                    app:backgroundTint="@color/white" />
            </LinearLayout>
        </HorizontalScrollView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/eventImage"
                    android:layout_width="wrap_content"
                    android:layout_height="240dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/museum"
                    app:layout_constraintBottom_toTopOf="@id/eventName"/>

                <TextView
                    android:id="@+id/eventName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:text="Название мероприятия"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/eventImage" />

                <LinearLayout
                    android:id="@+id/layoutTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/eventName">


                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_access_time_24"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:id="@+id/eventTime"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:text="26 ноября, 18:00"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/eventDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="Здесь будет краткое описание проводимого мероприятия"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/layoutTime" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"

            >


            <Button
                android:id="@+id/imageButtonDecline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text=""
                app:backgroundTint="#FFFFFF"
                app:icon="@drawable/ic_decline"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                app:iconSize="48dp"
                app:iconTint="@color/red">


            </Button>

            <Button
                android:id="@+id/imageButtonAccept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text=""
                app:backgroundTint="#FFFFFF"
                app:icon="@drawable/ic_baseline_favorite_24_new"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                app:iconSize="48dp"
                app:iconTint="@color/red"/>

        </LinearLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>